# gtk-jukebox

./: .gitignore  .ycm_extra_conf.py  README.md  main.c  meson.build
docs/: background.md
src/: connection_manager.c  connection_manager.h  fetcher.c  fetcher.h  jukebox-authorize-user.c  jukebox-authorize-user.h  jukebox-login-box.c  jukebox-login-box.h  jukebox-song-player.c  jukebox-song-player.h  jukebox-types.h  jukebox-user.c  jukebox-user.h  jukebox-window-player.c
src/config/: config.h
src/core/: jukebox-core.c  jukebox-core.h
